--- a/templates/results.html
+++ b/templates/results.html
@@ -14,9 +14,8 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        
+        <h1> List of users </h1>
         <table class="table">
-            <caption>List of users</caption>
             <thead>
               <tr>
                 <th scope="col">#</th>
